Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
