Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(boolean var)
    end
end
